--- a/site.yml
+++ b/site.yml
@@ -1,14 +1,10 @@
 ---
-- name: Install WordPress, MySQL, Nginx, and PHP-FPM
-  hosts: all
-  remote_user: root
-  # remote_user: user
-  # become: yes
-  # become_method: sudo
+- name: k8s preparation
+  hosts: tecent
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+  become_user: root
 
   roles:
     - common
-    - mysql
-    - nginx
-    - php-fpm
-    - wordpress
