add module copy

--- a/hello.yml
+++ b/hello.yml
@@ -5,3 +5,8 @@
     - name: Hello Message
       debug:
         msg: "Hello World!"
+    
+    - name: Test Copy
+      copy:
+        src=README.md
+        dest=~/
