--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,4 +9,4 @@
 
     - name: Start Node Exporter when non-exist
       shell: nohup /home/wuchunghsuan/node_exporter-0.16.0.linux-amd64/node_exporter >/dev/null 2>&1 &
-      when: state | failed
+      when: state is failed
